--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -13,14 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyspark\n",
     "import pyspark.sql.functions as F\n",
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.types import StructType, StructField, StringType, DoubleType"
+    "from pyspark.sql.types import StructType, StructField, StringType, DoubleType\n",
+    "from pyspark.sql.functions import isnan, sum as Fsum"
    ]
   },
   {
@@ -45,6 +46,13 @@
    "metadata": {},
    "source": [
     "## Create Dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reference - https://spark.apache.org/docs/latest/api/python/getting_started/quickstart_df.html"
    ]
   },
   {
@@ -255,6 +263,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PreProcessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Check NULL & NaN values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -339,14 +361,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Full dataset has 12779 rows. 4863 rows have Null values. We cant drop those rows bcz it has around 1/3 of full dataframe. So we should handle those values."
+    "Full dataset has 12779 rows. 4863 rows have NULL values. We cant drop those rows bcz it has around 1/3 of full dataframe. So we should handle those values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column: HCHO_reading, Null Count: 4863\n",
+      "Column: Location, Null Count: 0\n",
+      "Column: Current_Date, Null Count: 0\n",
+      "Column: Next_Date, Null Count: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check null values Column wise\n",
+    "for col in df.columns:\n",
+    "    null_count = df.filter(df[col].isNull()).count()\n",
+    "    print(f\"Column: {col}, Null Count: {null_count}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PreProcessing"
+    "Also only 'HCHO_reading' column has NULL values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check NaN values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of NaN values in 'Location' column: 0\n",
+      "Number of NaN values in 'Current_Date' column: 0\n",
+      "Number of NaN values in 'Next_Date' column: 0\n",
+      "Number of NaN values in 'HCHO_reading' column: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check NaN values in non-numeric columns\n",
+    "non_numeric_cols = [\"Location\", \"Current_Date\", \"Next_Date\"]\n",
+    "\n",
+    "for col in non_numeric_cols:\n",
+    "    nan_count = df.select(Fsum(F.col(col).isNull().cast(\"int\"))).collect()[0][0]\n",
+    "    print(f\"Number of NaN values in '{col}' column: {nan_count}\")\n",
+    "\n",
+    "# Count of NaN values in 'HCHO_reading' column\n",
+    "nan_count_hcho = df.select(Fsum(F.isnan(df[\"HCHO_reading\"]).cast(\"int\"))).collect()[0][0]\n",
+    "print(f\"Number of NaN values in 'HCHO_reading' column: {nan_count_hcho}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So there are no any NaN values in the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have to handle NULL values."
    ]
   },
   {
@@ -11960,6 +12055,41 @@
     "    for val in unique_values:\n",
     "        print(val[0])\n",
     "    print(\"---------------\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some values are in Scientific notation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Handle Scientific Notation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reference - https://spark.apache.org/docs/3.1.2/api/python/reference/api/pyspark.sql.functions.format_number.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Handle NULL values"
    ]
   },
   {
