--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,7 @@
     "from pyspark.sql import functions as F\n",
     "import pyspark_dist_explore as pdx\n",
     "from pyspark_dist_explore import hist\n",
+    "from pyspark.sql.functions import avg, when\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -12080,12 +12081,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reference - https://spark.apache.org/docs/3.1.2/api/python/reference/api/pyspark.sql.functions.format_number.html"
+    "Reference - https://spark.apache.org/docs/3.1.2/api/python/reference/api/pyspark.sql.functions.format_number.html , https://stackoverflow.com/questions/40206592/how-to-turn-off-scientific-notation-in-pyspark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12095,7 +12096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -12127,7 +12128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12137,7 +12138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -12178,7 +12179,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decided to handle null values based on the Location."
+    "Reference - https://pandas.pydata.org/docs/user_guide/missing_data.html , https://www.educba.com/pyspark-left-join/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decided to handle null values based on the Location. Fill NULL values with the mean HCHO reading for each location."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+---------------------+\n",
+      "|Location           |Mean_HCHO            |\n",
+      "+-------------------+---------------------+\n",
+      "|Kurunegala Proper  |1.3402027026668752E-4|\n",
+      "|Bibile, Monaragala |1.264313797412059E-4 |\n",
+      "|Jaffna Proper      |1.0880866503690622E-4|\n",
+      "|Deniyaya, Matara   |9.165608034246887E-5 |\n",
+      "|Colombo Proper     |1.585426956669877E-4 |\n",
+      "|Nuwara Eliya Proper|8.792586073767876E-5 |\n",
+      "|Kandy Proper       |1.0630856146355704E-4|\n",
+      "+-------------------+---------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate mean HCHO reading for each location\n",
+    "mean_hcho = df.groupBy(\"Location\").agg(avg(\"HCHO_reading\").alias(\"Mean_HCHO\"))\n",
+    "\n",
+    "mean_hcho.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above values also in scientific notation. So we want to format it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+-----------------+\n",
+      "|Location           |Mean_HCHO        |\n",
+      "+-------------------+-----------------+\n",
+      "|Kurunegala Proper  |0.000134020270267|\n",
+      "|Bibile, Monaragala |0.000126431379741|\n",
+      "|Jaffna Proper      |0.000108808665037|\n",
+      "|Deniyaya, Matara   |0.000091656080342|\n",
+      "|Colombo Proper     |0.000158542695667|\n",
+      "|Nuwara Eliya Proper|0.000087925860738|\n",
+      "|Kandy Proper       |0.000106308561464|\n",
+      "+-------------------+-----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Format existing Mean_HCHO column by removing scientific notation\n",
+    "mean_hcho = mean_hcho.withColumn(\"Mean_HCHO\", F.format_number(\"Mean_HCHO\", 15))\n",
+    "\n",
+    "mean_hcho.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# join mean_hcho DataFrame with original DataFrame for filling null values\n",
+    "df = df.join(mean_hcho, \"Location\", \"left\").withColumn(\n",
+    "    \"HCHO_reading\",\n",
+    "    when(F.col(\"HCHO_reading\").isNull(), mean_hcho[\"Mean_HCHO\"]).otherwise(F.col(\"HCHO_reading\"))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+------------+----------+------------------+-----------------+\n",
+      "|          Location|Current_Date| Next_Date|      HCHO_reading|        Mean_HCHO|\n",
+      "+------------------+------------+----------+------------------+-----------------+\n",
+      "|Bibile, Monaragala|  2019-01-02|2019-01-03| 0.000019199146525|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-03|2019-01-04| 0.000028114479359|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-04|2019-01-05| 0.000037479981844|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-05|2019-01-06|-0.000017982608793|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-06|2019-01-07| 0.000145783689618|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-07|2019-01-08| 0.000028285908025|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-08|2019-01-09| 0.000126431379741|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-09|2019-01-10| 0.000142085016705|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-10|2019-01-11| 0.000126431379741|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-11|2019-01-12| 0.000020145879471|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-12|2019-01-13| 0.000158278766321|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-13|2019-01-14| 0.000126431379741|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-14|2019-01-15| 0.000126431379741|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-15|2019-01-16| 0.000099528238496|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-16|2019-01-17| 0.000074845709605|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-17|2019-01-18| 0.000077361122263|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-18|2019-01-19| 0.000126431379741|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-19|2019-01-20| 0.000039881410104|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-20|2019-01-21| 0.000189162020385|0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-21|2019-01-22| 0.000115996992642|0.000126431379741|\n",
+      "+------------------+------------+----------+------------------+-----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+------------+----------+------------------+\n",
+      "|          Location|Current_Date| Next_Date|      HCHO_reading|\n",
+      "+------------------+------------+----------+------------------+\n",
+      "|Bibile, Monaragala|  2019-01-02|2019-01-03| 0.000019199146525|\n",
+      "|Bibile, Monaragala|  2019-01-03|2019-01-04| 0.000028114479359|\n",
+      "|Bibile, Monaragala|  2019-01-04|2019-01-05| 0.000037479981844|\n",
+      "|Bibile, Monaragala|  2019-01-05|2019-01-06|-0.000017982608793|\n",
+      "|Bibile, Monaragala|  2019-01-06|2019-01-07| 0.000145783689618|\n",
+      "|Bibile, Monaragala|  2019-01-07|2019-01-08| 0.000028285908025|\n",
+      "|Bibile, Monaragala|  2019-01-08|2019-01-09| 0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-09|2019-01-10| 0.000142085016705|\n",
+      "|Bibile, Monaragala|  2019-01-10|2019-01-11| 0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-11|2019-01-12| 0.000020145879471|\n",
+      "|Bibile, Monaragala|  2019-01-12|2019-01-13| 0.000158278766321|\n",
+      "|Bibile, Monaragala|  2019-01-13|2019-01-14| 0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-14|2019-01-15| 0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-15|2019-01-16| 0.000099528238496|\n",
+      "|Bibile, Monaragala|  2019-01-16|2019-01-17| 0.000074845709605|\n",
+      "|Bibile, Monaragala|  2019-01-17|2019-01-18| 0.000077361122263|\n",
+      "|Bibile, Monaragala|  2019-01-18|2019-01-19| 0.000126431379741|\n",
+      "|Bibile, Monaragala|  2019-01-19|2019-01-20| 0.000039881410104|\n",
+      "|Bibile, Monaragala|  2019-01-20|2019-01-21| 0.000189162020385|\n",
+      "|Bibile, Monaragala|  2019-01-21|2019-01-22| 0.000115996992642|\n",
+      "+------------------+------------+----------+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop the \"Mean_HCHO\" column\n",
+    "df = df.drop(\"Mean_HCHO\")\n",
+    "\n",
+    "df.show()"
    ]
   },
   {
