--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -405,13 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column: HCHO_reading, Null Count: 4863\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Column: HCHO_reading, Null Count: 4863\n",
       "Column: Location, Null Count: 0\n",
       "Column: Current_Date, Null Count: 0\n",
       "Column: Next_Date, Null Count: 0\n"
@@ -12389,13 +12383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column: Location, Null Count: 0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Column: Location, Null Count: 0\n",
       "Column: HCHO_reading, Null Count: 0\n",
       "Column: Current_Date, Null Count: 0\n",
       "Column: Next_Date, Null Count: 0\n"
@@ -13609,12 +13597,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\benur\\AppData\\Local\\Temp\\ipykernel_20284\\2775920275.py:20: FutureWarning: \n",
+      "C:\\Users\\benur\\AppData\\Local\\Temp\\ipykernel_16000\\2775920275.py:20: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
       "  sns.boxplot(data=processed_df, x='Location', y='HCHO_reading', ax=axs[1, 1], palette='Set2')\n",
-      "C:\\Users\\benur\\AppData\\Local\\Temp\\ipykernel_20284\\2775920275.py:22: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\benur\\AppData\\Local\\Temp\\ipykernel_16000\\2775920275.py:22: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axs[1, 1].set_xticklabels(axs[1, 1].get_xticklabels(), rotation=45, ha='right')\n"
      ]
     },
@@ -13656,6 +13644,24 @@
     "# Adjust layout and display the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Save processed DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save pandas df \n",
+    "csv_file_path = \"DataFrame/hcho_processed_df.csv\"\n",
+    "processed_df.to_csv(csv_file_path, index=False)"
    ]
   }
  ],
