Divide processed DF based on location

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -13483,6 +13483,40 @@
     "print(\"\\nDescriptive Statistics for HCHO Levels :\")\n",
     "print(stats_after_cleaning)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Divide processed df based on the Location"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('DataFrame\\\\processed_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# group the data by location\n",
+    "grouped_data = df.groupby('Location')\n",
+    "\n",
+    "# Iterate over each group (location) and save the data to separate CSV files\n",
+    "for location, data in grouped_data:\n",
+    "    # Define the filename for the CSV file based on the location name\n",
+    "    filename = f\"{location.replace(' ', '_')}_data.csv\"  # Replace spaces with underscores\n",
+    "    \n",
+    "    # Save the data for the current location to a CSV file\n",
+    "    data.to_csv(filename, index=False)"
+   ]
   }
  ],
  "metadata": {
